[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/bulletRed1_outline.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bullet.gd" type="Script" id=2]
[ext_resource path="res://scenes/ParticlesSmoke.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/explosionSmoke1.png" type="Texture" id=4]
[ext_resource path="res://sprites/explosionSmoke5.png" type="Texture" id=5]
[ext_resource path="res://sprites/explosionSmoke3.png" type="Texture" id=6]
[ext_resource path="res://sprites/explosionSmoke4.png" type="Texture" id=7]
[ext_resource path="res://sprites/explosionSmoke2.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0421
height = 7.11924

[sub_resource type="Animation" id=2]
resource_name = "explode"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteSelfDestruction:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteSelfDestruction:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Bullet" type="Area2D" groups=[
"cannon_bullets",
]]
collision_layer = 8
collision_mask = 54
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="ParticlesSmoke" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.0992151, 0.0992122 )
scale = Vector2( 0.751969, 0.394803 )

[node name="SpriteSelfDestruction" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="AnimationSelfDestruction" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
